# Ultramat-Arduino

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  bootstrap.sh  dewit.sh  platformio.ini
.github/workflows/: ci-cd.yml  ci.yml
ext/: README.md
include/: CommandEnum.h  CommandHandler.h  Commands.h  Communicator.h  ErrorHandling.h  MessageBuffer.h  SerialCommunication.h
include/util/: Device.h  ErrorHandling.h  RingBuffer.h
scripts/: flash.sh  flashMcu.sh  qemu.sh
scripts/cmake/: accelstepper-lib.cmake  arduino-core.cmake  toolchain-avr.cmake  ultra_version.h.in  version-header.cmake
src/: CommandHandler.cpp  Commands.cpp  Communicator.cpp  ErrorHandling.cpp  Filelist.cmake  Homing.h  MessageBuffer.cpp  SerialCommunication.cpp  main.cpp
src/util/: Device.cpp  ErrorHandling.cpp
test/: README.md
